src/main/java/com/example/recruit_page_wwy/_core/error/ex/ExceptionApi404.java
package com.example.recruit_page_wwy._core.error.ex;

public class ExceptionApi404 extends RuntimeException {
    public ExceptionApi404(String message) {
        super(message);
    }
}
